[gd_scene load_steps=7 format=3 uid="uid://cyqrhyrol0vk4"]

[ext_resource type="Script" path="res://Scenes/Main Menu/PauseMenu.gd" id="1_ttxdi"]
[ext_resource type="Texture2D" uid="uid://ci8hj6tqrt223" path="res://Textures/controls.png" id="2_kbdtm"]
[ext_resource type="Texture2D" uid="uid://j732uk4te5r6" path="res://Textures/start.png" id="3_rmpe4"]
[ext_resource type="Texture2D" uid="uid://cgfrc1ty4h0df" path="res://Textures/settings.png" id="4_rqrlu"]
[ext_resource type="Texture2D" uid="uid://ytjk55sbjxo4" path="res://Textures/quit.png" id="5_37537"]

[sub_resource type="LabelSettings" id="LabelSettings_43g0e"]
font_size = 91
font_color = Color(1, 0, 0, 1)
outline_size = 20
outline_color = Color(0.494245, 1.40181e-06, 2.40654e-07, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ttxdi")

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138021
anchor_top = 0.0277778
anchor_right = 0.861111
anchor_bottom = 0.932099
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.145833
anchor_top = 0.0385802
anchor_right = 0.855035
anchor_bottom = 0.91821
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.096
anchor_right = 0.5
anchor_bottom = 0.096
offset_left = -406.0
offset_top = -62.208
offset_right = 406.0
offset_bottom = 62.792
grow_horizontal = 2
text = "FORBIDDEN FLESH"
label_settings = SubResource("LabelSettings_43g0e")

[node name="Controls" type="Button" parent="."]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396701
anchor_top = 0.354938
anchor_right = 0.598958
anchor_bottom = 0.515432
text = "CONTROLS
"
icon = ExtResource("2_kbdtm")
metadata/_edit_use_anchors_ = true

[node name="ControlMenu" type="Control" parent="Controls"]
visible = false
z_index = 1
layout_mode = 1
anchor_left = -1.21459
anchor_top = -1.14423
anchor_right = 2.24034
anchor_bottom = 3.29807
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Controls/ControlMenu"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.568973, 0.568973, 0.568973, 1)

[node name="Label" type="Label" parent="Controls/ControlMenu"]
layout_mode = 0
anchor_right = 0.346584
anchor_bottom = 0.274892
offset_right = -239.0
offset_bottom = -104.0
text = "C to roll
WASD to move
Shift to sprint
Click to attack
Middle mouse to lock on to enemies
"
metadata/_edit_use_anchors_ = true

[node name="BackControls" type="Button" parent="Controls/ControlMenu"]
layout_mode = 0
offset_left = 731.0
offset_top = 403.0
offset_right = 796.0
offset_bottom = 452.0
text = "BACK"

[node name="Start" type="Button" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396701
anchor_top = 0.175154
anchor_right = 0.598958
anchor_bottom = 0.335648
offset_top = 23.5
offset_bottom = -23.5
grow_horizontal = 2
grow_vertical = 2
text = "RESUME
"
icon = ExtResource("3_rmpe4")
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Button" parent="."]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396701
anchor_top = 0.535494
anchor_right = 0.598958
anchor_bottom = 0.695988
text = "SETTINGS
"
icon = ExtResource("4_rqrlu")
metadata/_edit_use_anchors_ = true

[node name="SettingsMenu" type="Control" parent="Settings"]
visible = false
z_index = 1
layout_mode = 1
anchor_left = -1.21459
anchor_top = -2.25
anchor_right = 2.24034
anchor_bottom = 2.1923
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Settings/SettingsMenu"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.568973, 0.568973, 0.568973, 1)

[node name="Label" type="Label" parent="Settings/SettingsMenu"]
layout_mode = 0
anchor_right = 0.346584
anchor_bottom = 0.274892
offset_right = -239.0
offset_bottom = -104.0
metadata/_edit_use_anchors_ = true

[node name="BackSettings" type="Button" parent="Settings/SettingsMenu"]
layout_mode = 0
offset_left = 731.0
offset_top = 403.0
offset_right = 796.0
offset_bottom = 452.0
text = "BACK"

[node name="MasterAudio" type="HSlider" parent="Settings/SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.563976
anchor_top = 0.106061
anchor_right = 0.973914
anchor_bottom = 0.261905
min_value = -25.0
max_value = 10.0
step = 0.1
value = -10.0
metadata/_edit_use_anchors_ = true

[node name="MasterAudioLabel" type="Label" parent="Settings/SettingsMenu/MasterAudio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_right = 52.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Master Audio"

[node name="MouseSensitivity" type="HSlider" parent="Settings/SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0422361
anchor_top = 0.123377
anchor_right = 0.453417
anchor_bottom = 0.246754
min_value = 0.001
max_value = 0.05
step = 0.001
value = 0.01
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Settings/SettingsMenu/MouseSensitivity"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Mouse Sensitivity"

[node name="MusicAudio" type="HSlider" parent="Settings/SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.563976
anchor_top = 0.281386
anchor_right = 0.973914
anchor_bottom = 0.43723
min_value = 30.0
max_value = 60.0
value = 50.0
metadata/_edit_use_anchors_ = true

[node name="MusicAudioLabel" type="Label" parent="Settings/SettingsMenu/MusicAudio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_right = 52.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Music Volume"

[node name="Quit" type="Button" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396701
anchor_top = 0.714506
anchor_right = 0.598958
anchor_bottom = 0.875
text = "QUIT"
icon = ExtResource("5_37537")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Controls/ControlMenu/BackControls" to="." method="_on_back_controls_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Settings/SettingsMenu/BackSettings" to="." method="_on_back_settings_pressed"]
[connection signal="drag_ended" from="Settings/SettingsMenu/MasterAudio" to="." method="_on_master_audio_drag_ended"]
[connection signal="drag_ended" from="Settings/SettingsMenu/MouseSensitivity" to="." method="_on_mouse_sensitivity_drag_ended"]
[connection signal="drag_ended" from="Settings/SettingsMenu/MusicAudio" to="." method="_on_music_audio_drag_ended"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
